--- a/LinkCode/index.html
+++ b/LinkCode/index.html
@@ -462,6 +462,7 @@
 
 
 <!-- COMPANY LOGOS -->
+<!--
 <div class="container container-marquee">
   <div class="row p-2">
     <h3 class="mt-5 mx-auto">With Great Efforts</h3>
@@ -483,7 +484,7 @@
     </marquee>
   </div>
 </div>
-
+-->
 
 <!-- CONTACT US -->
 <div class="container ">
@@ -523,6 +524,49 @@
   </div>
 </div>
 
+<!-- footer -->
+<!--Footer -->
+<div class="container my-5 py-3 border shadow " style="border-radius: 15px;">
+  <div class="row  ">
+    <div class="col-md">
+      <a class="mx-2 navbar-brand" href="#"><h3>LinkCode</h3></a>
+      <!-- <img src="./images/logo.jpg " class="ml-2 " alt="" style="height: 70px;"> -->
+      <p >Connect with us</p>
+      <div>
+        <i class="fa fa-facebook-official mx-2" aria-hidden="true"></i>
+        <i class="fa fa-instagram mx-2" aria-hidden="true"></i>
+        <i class="fa fa-twitter mx-2" aria-hidden="true"></i>
+        <i class="fa fa-whatsapp mx-2" aria-hidden="true"></i>
+      </div>
+    </div>
+    <div class="col-md">
+      <ul class="list-unstyled mt-2">
+        <li class="h4">Company</li>
+        <li class="mt-3"><i class="fa fa-money mr-2" aria-hidden="true"></i>Pricing</li>
+        <li><i class="fa fa-users mr-2" aria-hidden="true "></i>Profile management</li>
+        <li><i class="fa fa-linode mr-2" aria-hidden="true"></i>Linkcode App</li>
+        
+      </ul>
+    </div>
+    <div class="col-md mt-2">
+      <ul class="list-unstyled">
+        <li class="h4">Languages</li>
+        <li class="mt-3"><i class="fa fa-coffee mr-2" aria-hidden="true"></i>Java</li>
+        <li><i class="fa fa-database mr-2" aria-hidden="true"></i>Python </li>
+        <li><i class="fa fa-cc mr-2" aria-hidden="true"></i>C/C++/OOPS/DSA</li>
+        <li><i class="fa fa-window-maximize mr-2" aria-hidden="true"></i>Web Development</li>
+      </ul>
+    </div>
+    <div class="col-md mt-2">
+      <ul class="list-unstyled">
+        <li class="h4">Learn and Connect</li>
+        <li class="mt-3"><i class="fa fa-envelope mr-2" aria-hidden="true"></i>Mail us</li>
+        <li><i class="fa fa-file-text-o mr-2" aria-hidden="true"></i>Internship</li>  
+        <li><i class="fa fa-phone mr-2" aria-hidden="true"></i>Contact us</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <a class="btn btn-bottom-right mx-2" href="#home"><i class="fa fa-arrow-circle-up fa-2x" aria-hidden="true"></i></a>
 
